--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Aug 12 2021 10:34:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Sep 16 2021 12:58:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ed4accb8a17539b18133d0" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/wazimap-ng.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,italic,500,500italic,700,900"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Roboto:300,regular,italic,500,500italic,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
