--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Oct 07 2021 10:12:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 11 2021 12:04:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ed4accb8a175783a8133c8" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
@@ -221,32 +221,6 @@
         <div id="w-node-d59f773f-aa49-25bd-47c6-0df91218fa61-3a8133c8" class="button-wrapper">
           <a href="#" class="button button--margin-right button--grey w-button">Cancel</a>
           <a id="warning-proceed" href="#" class="button button--margin-right w-button">Proceed</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="generic-modal hidden">
-    <div class="modal">
-      <div class="modal__header">
-        <div class="modal-title">
-          <h1 class="clear">Loading...</h1>
-        </div>
-      </div>
-      <div class="modal__content">
-        <div class="w-richtext">
-          <p>Loading...</p>
-        </div>
-      </div>
-      <div id="w-node-ff6bef03-2df4-3fa9-ffeb-855d80851ab6-3a8133c8" class="modal__actions">
-        <div id="w-node-ff6bef03-2df4-3fa9-ffeb-855d80851ab7-3a8133c8" class="dismiss__no-show">
-          <div class="html-embed w-embed">
-            <p><input type="checkbox" class="custom-checkbox" name="dismiss__no-show" id="no-show"></p>
-          </div>
-          <div class="checkbox-label">Don&#x27;t show again</div>
-        </div>
-        <div id="w-node-ff6bef03-2df4-3fa9-ffeb-855d80851abb-3a8133c8" class="button-wrapper">
-          <a href="#" class="button button--margin-right button--grey button--modal-secondary w-button">Cancel</a>
-          <a id="warning-proceed" href="#" class="button button--margin-right button--modal-primary w-button">Proceed</a>
         </div>
       </div>
     </div>
@@ -482,7 +456,7 @@
                     </div>
                   </div>
                 </div>
-                <a title="Remove filter" href="#" class="point-filters__remove-filter is--hidden w-inline-block">
+                <a title="Remove filter" href="#" class="point-filters__remove-filter w-inline-block">
                   <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
                       <path d="M0 0h24v24H0z" fill="none"></path>
                       <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
