collapsing / expanding facilities

--- a/src/401.html
+++ b/src/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Oct 26 2021 05:03:05 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Nov 04 2021 06:49:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ed4accb8a17533bd8133cf" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   <div class="utility-page-wrap">
     <div class="utility-page-content w-password-page w-form">
       <form action="/.wf_auth" method="post" class="utility-page-form w-password-page"><img src="https://d3e54v103j8qbb.cloudfront.net/static/password-page-lock.832ca8e2c9.svg" alt="">
-        <h2>Protected Page</h2><input type="password" autofocus="true" maxlength="256" name="pass" placeholder="Enter your password" class="w-password-page w-input"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
+        <h2>Protected Page</h2><input type="password" class="w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="field"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
         <div class="w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
