fixed filter dialogs overlapping issue

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Dec 10 2021 06:08:26 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jan 18 2022 07:04:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61adcab3ab671b5d2ab2da33" data-wf-site="5fd05e808ba6609d12285571">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@
       </div>
       <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-2ab2da33" class="login__form">
         <div class="form-block w-form">
-          <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" placeholder="" id="Password" required="">
+          <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form" method="get"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" placeholder="" id="Password" required="">
             <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-2ab2da33" class="w-checkbox login-form__checkbox">
                 <div class="w-checkbox-input w-checkbox-input--inputType-custom custom-checkbox"></div><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" style="opacity:0;position:absolute;z-index:-1"><span class="checkbox-label w-form-label" for="checkbox-2">Remember me</span>
               </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-2ab2da33" class="button w-button">
@@ -830,7 +830,7 @@
                     </svg></div>
                 </a>
               </div>
-              <a title="Add new filter" href="#" class="mapping-options__add-filter hdden w-inline-block">
+              <a title="Add new filter" href="#" class="mapping-options__add-filter hidden w-inline-block">
                 <div class="text-block-3">Add new filter</div>
                 <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
                     <path d="M0 0h24v24H0z" fill="none"></path>
@@ -2340,7 +2340,7 @@
                   <div class="data-category__h2_content">
                     <div class="data-category__h2_wrapper">
                       <div class="data-category__h3">
-                        <div data-w-id="d9dcf788-413f-9049-8723-d6b050277cba" class="data-category__h3_trigger">
+                        <div data-w-id="a8c826b6-e25c-9fb6-a00b-f045ee08fa14" class="data-category__h3_trigger">
                           <div class="truncate">Indicator</div>
                           <div class="data-category__h3_loading hidden"><img src="images/loading.gif" alt=""></div>
                           <div class="data-category__h3_load-complete hidden">
@@ -2390,7 +2390,7 @@
                         </div>
                       </div>
                       <div class="data-category__h3">
-                        <div data-w-id="1e35aa5d-6794-7eaf-27f0-84b06b77495c" class="data-category__h3_trigger">
+                        <div class="data-category__h3_trigger">
                           <div class="truncate">Indicator</div>
                           <div class="data-category__h3_loading"><img src="images/loading.gif" alt=""></div>
                           <div class="data-category__h3_load-complete hidden">
@@ -2440,7 +2440,7 @@
                         </div>
                       </div>
                       <div class="data-category__h3">
-                        <div data-w-id="5cc4d99e-ac57-fc58-7a13-748080bb6e5e" class="data-category__h3_trigger bg-primary-light active">
+                        <div class="data-category__h3_trigger bg-primary-light active">
                           <div class="truncate">Indicator</div>
                           <div class="data-category__h3_loading hidden"><img src="images/loading.gif" alt=""></div>
                           <div class="data-category__h3_load-complete">
@@ -2476,6 +2476,96 @@
                               </div>
                             </a>
                             <a href="#" class="data-category__h4 active w-inline-block">
+                              <div class="data-category__h4_line-h"></div>
+                              <div class="truncate">Subindicator</div>
+                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
+                              <div class="data-category__h4_load-complete">
+                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                                    <path d="M0 0h24v24H0z" fill="none"></path>
+                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+                                  </svg></div>
+                              </div>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="styles__area_block">
+          <div class="data-category--v2">
+            <div href="#" class="data-category__h1_trigger--v2 bg-primary">
+              <div class="data-category__h1_header">
+                <div class="data-category__h1_icon hidden">
+                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
+                    </svg></div>
+                </div>
+                <div class="data-category__h1_title">
+                  <div class="truncate">Category</div>
+                </div>
+              </div>
+              <div class="data-category__h1_toggle toggle-icon-v">
+                <div class="toggle-icon-v--first w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M7 10l5 5 5-5z"></path>
+                  </svg></div>
+                <div class="toggle-icon-v--last w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M17,14l-5-5l-5,5H17z"></path>
+                  </svg></div>
+              </div>
+            </div>
+            <div class="data-category__h1_content--v2">
+              <div class="data-category__h1_wrapper">
+                <div class="data-category__h2">
+                  <div href="#" class="data-category__h2_trigger--v2">
+                    <div class="truncate">Subcategory</div>
+                  </div>
+                  <div class="data-category__h2_content--v2">
+                    <div class="data-category__h2_wrapper">
+                      <div class="data-category__h3">
+                        <div class="data-category__h3_trigger--v2">
+                          <div class="truncate">Indicator</div>
+                          <div class="data-category__h3_loading hidden"><img src="images/loading.gif" alt=""></div>
+                          <div class="data-category__h3_load-complete hidden">
+                            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                                <path d="M0 0h24v24H0z" fill="none"></path>
+                                <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+                              </svg></div>
+                          </div>
+                        </div>
+                        <div class="data-category__h3_content--v2">
+                          <div class="data-category__h3_wrapper">
+                            <div class="data-category__h4_line-v"></div>
+                            <a href="#" class="data-category__h4 w-inline-block">
+                              <div class="data-category__h4_line-h"></div>
+                              <div class="truncate">Subindicator</div>
+                              <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
+                              <div class="data-category__h4_load-complete hidden">
+                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                                    <path d="M0 0h24v24H0z" fill="none"></path>
+                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+                                  </svg></div>
+                              </div>
+                            </a>
+                            <a href="#" class="data-category__h4 w-inline-block">
+                              <div class="data-category__h4_line-h"></div>
+                              <div class="truncate">Subindicator</div>
+                              <div class="data-category__h4_loading"><img src="images/loading.gif" alt=""></div>
+                              <div class="data-category__h4_load-complete hidden">
+                                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                                    <path d="M0 0h24v24H0z" fill="none"></path>
+                                    <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"></path>
+                                  </svg></div>
+                              </div>
+                            </a>
+                            <a href="#" class="data-category__h4 bg-primary-light active w-inline-block">
                               <div class="data-category__h4_line-h"></div>
                               <div class="truncate">Subindicator</div>
                               <div class="data-category__h4_loading hidden"><img src="images/loading.gif" alt=""></div>
@@ -3455,6 +3545,9 @@
 .mapping-options__filter.disabled {
 	pointer-events: none;
   }
+.data-category__h1_content--v2.is--closed {
+  max-height: 0px !important;
+}
 </style>
   </div>
   <div class="facility-print-styling w-embed">
